:lisptick: Fix styling with revise button where modal button options are too big

--- a/src/app/cube/details/action-panel/revise-button.component.scss
+++ b/src/app/cube/details/action-panel/revise-button.component.scss
@@ -3,11 +3,16 @@
 button.neutral {
   width: 100%;
 }
+
 p {
   font-size: $normal;
 }
 .btn-group {
   margin-top: 50px;
+
+  button {
+    width: auto;
+  }
 }
 
 .popup-content {
